<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
          android:title="@string/search"
          android:icon="@drawable/ic_search"
          app:showAsAction="always"/>
    <item android:id="@+id/favourite"
          android:title="@string/favourite"
          android:icon="@drawable/ic_favorite"
          app:showAsAction="always"/>
    <item android:title="@string/sortby">
        <menu>
            <item android:id="@+id/sort_time"
                  android:title="@string/sort_time"/>
            <item android:id="@+id/sort_category"
                  android:title="@string/sort_category"/>
        </menu>
    </item>
    <item
        android:id="@+id/delete_all"
        android:title="@string/delete_all"/>
</menu>